LIST/TUPLE/DICTIONARY NEW METHOD/OPERATION

--- a/Dict.ipynb
+++ b/Dict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "2a992815",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "{1: 'tiger', 2: 'rat', 3: 'mouse', 4: 'lion'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,17 +25,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
+   "id": "4e9cc98f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tiger\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dictionary Method\n",
+    "print(vals.get(1))\n",
+    "print(sorted(vals))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "4a4509ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 'tiger', 2: 'rat', 3: 'mouse', 4: 'lion', 5: 'kiwi'}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vals.update({5:\"kiwi\"})\n",
+    "vals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "b69d886f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys([1, 2, 3, 4])"
+       "dict_keys([1, 2, 3, 4, 5])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5d93ef49",
    "metadata": {},
    "outputs": [
@@ -69,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "id": "b39e2504",
    "metadata": {},
    "outputs": [
@@ -79,7 +122,7 @@
        "'tiger'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,6 +131,175 @@
     "# Find Element by Key\n",
     "vals[1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "5d256d22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 'kiwi')"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vals.popitem()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "c00cccb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 'tiger', 2: 'rat', 3: 'mouse', 4: 'lion'}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "2e91458b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tiger'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vals.pop(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "174e84e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2: 'rat', 3: 'mouse', 4: 'lion'}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f3f35a5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rat\n",
+      "mouse\n",
+      "lion\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print dictionary values\n",
+    "for x in vals:\n",
+    "    print(vals[x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "72d17aae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 rat\n",
+      "3 mouse\n",
+      "4 lion\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x, y in vals.items():\n",
+    "    print(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a3078d8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2: 'rat', 3: 'mouse', 4: 'lion'}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Copy the whole dictionary to new dictionary\n",
+    "vals2 = vals.copy()\n",
+    "vals2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "77917c01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# delete dictionary \n",
+    "vals.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97b77384",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
