--- a/Tuple.ipynb
+++ b/Tuple.ipynb
@@ -199,8 +199,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b2cdf164",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('mango', 'lemon', 'guava', 'orange')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits = (\"orange\",\"guava\",\"lemon\",\"mango\")\n",
+    "# Access Element through index\n",
+    "fruits[::-1]\n",
+    "tuple(reversed(fruits))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c1a27494",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count Tuple Element with Method\n",
+    "print(fruits.count(\"mango\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d2e53a5",
    "metadata": {},
    "outputs": [],
    "source": []
